Start Feature - Allow system property

--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,140 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>bentessa</groupId>
+  <groupId>io.github.mezatsong</groupId>
   <artifactId>ladalja</artifactId>
-  <version>1.0</version>
-  <name>Ladalja</name>
-  <description>A Java API for database, the must simple to use</description>  
+  <version>1.2.1</version>
+  <packaging>jar</packaging> 
+  <name>${project.groupId}:${project.artifactId}</name>
+  <description>This is a simple library for handling database, with less code as possible, it was inspired by laravel (php framework) behavior</description>  
+  <url>https://github.com/Mezatsong/ladalja</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.7</maven.compiler.source>
+  </properties>
+
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.16</version>
+        <scope>test</scope>
+    </dependency>
+  </dependencies>
+
+
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+    </license>
+  </licenses> 
+  
+  <developers>
+    <developer>
+      <name>MEZATSONG TSAFACK Carrel</name>
+      <email>meztsacar@gmail.com</email>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:git://github.com/Mezatsong/ladalja.git</connection>
+    <developerConnection>scm:git:ssh://github.com:Mezatsong/ladalja.git</developerConnection>
+    <url>https://github.com/Mezatsong/ladalja/tree/master</url>
+  </scm>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
+
+  <build>
+    <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+        </configuration>
+      </plugin>
+
+      <plugin>   
+        <groupId>org.apache.maven.plugins</groupId>  
+        <artifactId>maven-javadoc-plugin</artifactId>         
+        <version>3.0.0</version> 
+        <configuration>
+          <show>private</show>
+        </configuration>
+        <executions>   
+          <execution>    
+            <id>attach-javadocs</id>   
+            <goals>     
+              <goal>jar</goal>   
+            </goals>   
+          </execution>  
+        </executions> 
+      </plugin> 
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>  
+        <artifactId>maven-source-plugin</artifactId>    
+        <version>3.0.1</version> 
+        <executions>   
+          <execution>    
+            <id>attach-sources</id>   
+            <goals>      
+              <goal>jar</goal>   
+            </goals>   
+          </execution> 
+        </executions> 
+      </plugin>
+
+      <plugin>  
+        <groupId>org.apache.maven.plugins</groupId>  
+        <artifactId>maven-gpg-plugin</artifactId>  
+        <version>1.6</version>  
+        <executions>  
+          <execution>    
+            <id>sign-artifacts</id>   
+            <phase>verify</phase>   
+            <goals>     
+              <goal>sign</goal>   
+            </goals> 
+          </execution> 
+        </executions> 
+      </plugin>
+
+      <plugin>  
+        <groupId>org.sonatype.plugins</groupId> 
+        <artifactId>nexus-staging-maven-plugin</artifactId>          
+        <version>1.6.8</version> 
+        <extensions>true</extensions>
+        <configuration>    
+          <serverId>ossrh</serverId>    
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl> 
+          <autoReleaseAfterClose>false</autoReleaseAfterClose> 
+        </configuration>
+      </plugin>
+
+    </plugins>
+  </build>
+
 </project>
