--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.mezatsong</groupId>
   <artifactId>ladalja</artifactId>
-  <version>1.2.1</version>
+  <version>1.3</version>
   <packaging>jar</packaging> 
   <name>${project.groupId}:${project.artifactId}</name>
   <description>This is a simple library for handling database, with less code as possible, it was inspired by laravel (php framework) behavior</description>  
@@ -17,17 +17,25 @@
   <dependencies>
     <!-- https://mvnrepository.com/artifact/junit/junit -->
     <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.12</version>
-        <scope>test</scope>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.16</version>
-        <scope>test</scope>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.16</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- https://github.com/xerial/sqlite-jdbc -->
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.15.1</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -129,7 +137,7 @@
         <extensions>true</extensions>
         <configuration>    
           <serverId>ossrh</serverId>    
-          <nexusUrl>https://oss.sonatype.org/</nexusUrl> 
+          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl> 
           <autoReleaseAfterClose>false</autoReleaseAfterClose> 
         </configuration>
       </plugin>
